--- a/catalog.html
+++ b/catalog.html
@@ -872,7 +872,7 @@
                </div>
             </div>
          </section>
-         <section class="section-default section-m-50">
+         <section class="section-default section-m-50 mt95">
             <h2 class="h2-section mb">Просмотренные товары</h2>
          </section>
          <div class="viewed-products-overflow-container">
