--- a/collection.html
+++ b/collection.html
@@ -69,7 +69,7 @@
             <img src="./assets/icon/Rectangle 1860.svg" alt="" />
             <p class="line_line"></p>
          </div>
-         <p class="subtitle-home subtitle-collection z-2">Простая жизнь, но со вкусом</p>
+         <p class="subtitle-collection z-2">Простая жизнь, но со вкусом</p>
 
          <nav class="burger-nav-menu">
             <!-- mt112 -->
