--- a/cabinet.html
+++ b/cabinet.html
@@ -339,7 +339,7 @@
                         <div class="cashback_level__status-bar"></div>
                      </div>
                   </div>
-                  <div class="bonus-card" style="background-image: url(./assets/icon/bonus-card.svg)">
+                  <div class="bonus-card" style="background-image: url(./assets/icon/bonus-card-v-2.svg)">
                      <p class="bonus-card_value">Кешбэк 3<span>%</span></p>
                      <p class="bonus-card_name">Konstantin К.</p>
                   </div>
