--- a/cabinet.html
+++ b/cabinet.html
@@ -430,12 +430,15 @@
                               const yearControl = document.createElement("div");
                               yearControl.className = "year-control";
 
-                              const yearUp = document.createElement("span");
+                              const yearUp = document.createElement("img");
                               yearUp.className = "arrow";
-                              yearUp.textContent = "▲";
-                              const yearDown = document.createElement("span");
+                              yearUp.src = "assets/icon/arrow-corner-right.svg";
+                              yearUp.style.transform = "rotate(270deg)";
+                              yearUp.style.height = "13px";
+                              const yearDown = document.createElement("img");
                               yearDown.className = "arrow";
-                              yearDown.textContent = "▼";
+                              yearDown.src = "assets/icon/arrow-corner-right.svg";
+                              yearDown.style.transform = "rotate(90deg)";
                               const yearDisplay = document.createElement("span");
                               yearDisplay.textContent = year;
 
